# semantic-layer

./: .gitignore  Makefile  README.md  docker-compose.yml  env.py  main.py  pyproject.toml
config_schemas/: __init__.py  app.py  database.py  infra.py  retrieval.py  runtime.py  summary.py
configs/: __init__.py  config.py  default.yaml
semantic_layer/: __init__.py  build_mdl.py  db_schema.py  embedder_litellm.py  helper.py  mdl_validator.py  pgvector_retrieval.py  pgvector_store.py  pipeline.py  table_description.py
