[project]
name = "semantic-layer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "haystack-ai==2.7.0",
    "openai>=2.2.0",
    "orjson",
    "omegaconf>=2.3.0",
    "pydantic==2.11.10",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "sf-hamilton==1.69.0",
    "tiktoken",
    "tqdm",
]
